# neural_elevation_models

./: .gitignore  =0.17  =1.11  =3.27  =68.1  DEM_README.md  LICENSE  README.md  dem_test.ipynb  global_planner.py  neural_elevation_model.ipynb  path_planning.ipynb  pyproject.toml  requirements.txt  run_kriging.py  setup.py  test_spatial_methods.py  traj_param.ipynb
.cursor/: rules
configs/: nemo.yaml  sweep_config.yaml  train.yaml
docs/: wandb_logging.md
examples/: dem_usage_examples.py  flexible_losses_example.py  nemov2_usage_example.py  training_with_wandb.py
models/: AirSimMountains_mlp.pth  airsim_mountains_siren.pt  lunar_dem_siren.pth  lunar_dem_siren_-1_1_30_30.pth  mt_bruno_siren.pt  red_rocks_height_net.pth
nemo/: astar.py  dem.py  dstar.py  dynamics.py  field.py  fit.py  fourier_mlp.py  geometry.py  global_planner.py  logger.py  nemo.py  nemov2.py  path.py  planning.py  plotting.py  siren.py  spatial_distortions.py  util.py
notebooks/: 2dgs.ipynb  airsim_path_planning.ipynb  baselines.ipynb  camera_spiral.ipynb  comparison.ipynb  data_analysis.ipynb  dem.ipynb  dem_analysis.ipynb  dem_ray_intersection.ipynb  dem_test.ipynb  field_dstar.ipynb  height_net.ipynb  kt22.html  l4casadi.ipynb  load_ply.ipynb  lunar_dem.ipynb  nemo_arch.ipynb  neural_dynamics_planning.ipynb  path_planning.ipynb  siren.ipynb  slope_dynamics.ipynb  traj_param.ipynb
output/: kriging_prediction.npy  kriging_variance.npy  kriging_x_coords.npy
scripts/: diff_flatness.py  get_dem_patch.py  load_mesh.py  nemo_planning.py  neural_ode_planning.py  plot_siren.py  train_nemo.py  (+4 more)
(+78 files in other folders)
